# ai_inventory_fc

./: MANIFEST.in  README.md  modules.txt  pyproject.toml  setup.py
ai_inventory_fc/: .gitignore  MANIFEST.in  README.md  app.json  pyproject.toml  setup.py
ai_inventory_fc/ai_inventory/: forecast.py
ai_inventory_fc/ai_inventory/doctype/ai_forecast/: ai_forecast.json  ai_forecast.py
ai_inventory_fc/ai_inventory_fc/: hooks.py  modules.txt  tasks.py
ai_inventory_fc/ai_inventory_fc/ai_inventory/doctype/ai_forecast_result/: ai_forecast_result.json
ai_inventory_fc/ai_inventory_fc/ai_inventory/doctype/ai_forecast_sync_log/: ai_forecast_sync_log.json
ai_inventory_fc/ai_inventory_fc/config/: desktop.py
ai_inventory_fc/ai_inventory_fc/fixtures/Workspace/: AI Inventory.json
ai_inventory_fc/ai_inventory_fc/public/js/: ai_forecast.js
ai_inventory_fc/config/: desktop.py
