[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_inventory_fc"
version = "0.0.1"
description = "AI Inventory FC (Frappe app)"
authors = [{ name = "Your Name", email = "you@example.com" }]
readme = "README.md"
requires-python = ">=3.10"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
include = ["ai_inventory_fc*"]

[tool.setuptools]
include-package-data = true
