[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "ai_inventory_fc"
version = "0.1.0"
description = "Lightweight AI inventory & sales forecast app compatible with ERPNext and deployable on Frappe Cloud."
readme = "README.md"
authors = [{name = "Your Name", email = "you@example.com"}]
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
  "frappe>=15.0.0",
  "erpnext>=15.0.0",
]
[project.urls]
Homepage = "https://example.com"
